syntax = "proto3";

package Discussify.Protos;

service InteractionService {
    rpc GetInteractionsByPostId (GetInteractionsByPostIdRequest) returns (GetInteractionsByPostIdResponse);
    rpc GetCommentInteractionsByIds (GetCommentInteractionsByIdsRequest) returns (GetCommentInteractionsByIdsResponse);
}

// GetInteractionsByPostId
message GetInteractionsByPostIdRequest {
    int32 postId = 1;
}

message GetInteractionsByPostIdResponse {
    int32 upvote = 1;
    int32 downvote = 2;
    int32 comment = 3;
}

// GetCommentInteractionsByIds
message GetCommentInteractionsByIdsRequest {
    repeated int32 commentIds = 1;
}

message GetCommentInteractionsByIdsResponse {
    repeated CommentInteraction interactionCounts = 1;
}

message CommentInteraction {
    int32 commentId = 1;
    int32 upvote = 2;
    int32 downvote = 3;
}